--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,29 @@
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">colonne A</div>
+      </div>
+      <div class="row">
+        <div class="col-6">colonne B</div>
+        <div class="col-6">colonne C</div>
+      </div>
+      <div class="row">
+        <div class="col-4">colonne D</div>
+        <div class="col-4">colonne E</div>
+        <div class="col-4">colonne F</div>
+      </div>
+      <div class="row">
+        <div class="col-5">colonne G</div>
+        <div class="col-7">colonne H</div>
+      </div>
+      <div class="row">
+        <div class="col-3">colonne I</div>
+        <div class="col-6">colonne J</div>
+        <div class="col-3">colonne K</div>
+      </div>
+    </div>
 
     <script src="js/main.js" type="module"></script>
   </body>
